versioned_docs/version-2.15.0/api-reference/type-aliases/Cache.mdx
```ts
type Cache = {
  cacheDirectory?: string;
  canWrite: boolean;
  debug?: boolean;
  read: Uint8Array | undefined;
  write: void;
};
```

Defined in: [lib/proof-system/cache.ts:25](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L25)

Interface for storing and retrieving values, for caching.
`read()` and `write()` can just throw errors on failure.

The data that will be passed to the cache for writing is exhaustively described by the [CacheHeader](CacheHeader.mdx) type.
It represents one of the following:
- The SRS. This is a deterministic lists of curve points (one per curve) that needs to be generated just once,
  to be used for polynomial commitments.
- Lagrange basis commitments. Similar to the SRS, this will be created once for every power-of-2 circuit size.
- Prover and verifier keys for every compiled circuit.

Per smart contract or ZkProgram, several different keys are created:
- a step prover key (`step-pk`) and verification key (`step-vk`) _for every method_.
- a wrap prover key (`wrap-pk`) and verification key (`wrap-vk`) for the entire contract.

## Properties

### cacheDirectory?

```ts
optional cacheDirectory?: string;
```

Defined in: [lib/proof-system/cache.ts:56](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L56)

The directory where cache files are stored. Only applicable for file system caches.

***

### canWrite

```ts
canWrite: boolean;
```

Defined in: [lib/proof-system/cache.ts:44](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L44)

Indicates whether the cache is writable.

***

### debug?

```ts
optional debug?: boolean;
```

Defined in: [lib/proof-system/cache.ts:52](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L52)

If `debug` is toggled, `read()` and `write()` errors are logged to the console.

By default, cache errors are silent, because they don't necessarily represent an error condition,
but could just be a cache miss, or file system permissions incompatible with writing data.

## Methods

### read()

```ts
read(header: CacheHeader): Uint8Array | undefined;
```

Defined in: [lib/proof-system/cache.ts:31](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L31)

Read a value from the cache.

#### Parameters

##### header

[`CacheHeader`](CacheHeader.mdx)

A small header to identify what is read from the cache.

#### Returns

`Uint8Array` \| `undefined`

***

### write()

```ts
write(header: CacheHeader, value: Uint8Array): void;
```

Defined in: [lib/proof-system/cache.ts:39](https://github.com/o1-labs/o1js/blob/6d089a824781b83f5d4faa1ceebcb9612ae72411/src/lib/proof-system/cache.ts#L39)

Write a value to the cache.

#### Parameters

##### header

[`CacheHeader`](CacheHeader.mdx)

A small header to identify what is written to the cache. This will be used by `read()` to retrieve the data.

##### value

`Uint8Array`

The value to write to the cache, as a byte array.

#### Returns

`void`
